test/Fail/InstanceArgumentsNotFound.err
InstanceArgumentsNotFound.agda:7.8-9: error: [InstanceNoCandidate]
No instance of type A was found in scope.
when checking that the expression f has type B
